1999-10-18  Hippo

	* libs/Colorset: changed signature of AllocColorset
	* fvwm/functions.c: New function DefaultColorset
	* fvwm/builtins.c: New function DefaultColorset, DefaultColors does
	not mess with colorsets.

1999-10-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (executeModuleSync):
	made a small performance enhancement

1999-10-18 Olivier Chapuis <olivier.chapuis@free.fr>

	* module_interface.c (executeModuleSync):  New logic in the
	executeModuleSynch loop. Ctl-Alt-Escape allows to exit from a
	ModuleSynchronous command.

1999-10-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c: moved most window creation stuff into separate
	functions; still in progress
	general cleanup

	* fvwm/move_resize.c (resize_window):
	the ButtonRelease after aborting a resize operation doesn't get passed
	to the window below anymore

1999-10-16  Eric Gillespie Jr.  <epg@pobox.com>

	* fvwm/conditional.c (MatchesConditionMask): Tests for the
	do_circulate_skip_shaded flag.

	* fvwm/session.c (MatchWinToSM): Sets whether window has the
	do_circulate_skip_shaded flag after session restart.

	* fvwm/window_flags.h (DO_SKIP_SHADED_CIRCULATE):
	(SET_DO_SKIP_SHADED_CIRCULATE):
	(SETM_DO_SKIP_SHADED_CIRCULATE): New macros.

	* fvwm/style.c (ProcessNewStyle): Looks for CirculateSkipShaded and
	CirculateHitShaded styles.

	* fvwm/fvwm.h: New flag do_circulate_skip_shaded

1999-10-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/XError.c (PrintXErrorAndCoredump):
	removed unused variable msg

	* fvwm/move_resize.c (moveLoop):
	window jumps back to original position immediately when a move is
	terminated (fixes bug #59)
	unmap geometry window immediately when the move ends

	* fvwm/fvwm.c (FvwmErrorHandler):
	* fvwm/move_resize.c (moveLoop):
	(resize_window):
	global 'bad_window' allows to terminate opaque move/resize when the
	window has died

	* fvwm/move_resize.c (moveLoop):
	'Escape' switches back to original page
