@@ -179,8 +179,8 @@
 #define SMFOCUS_MODE(st) ((st).flag_mask.common.s.focus_mode)
 #define SCFOCUS_MODE(st) ((st).change_mask.common.s.focus_mode)
 #define SFSET_FOCUS_MODE(st,x) ((st).flags.common.s.focus_mode = (x))
-#define SMSET_FOCUS_MODE(st,x) ((st).flag_mask.common.s.focus_mode = !!(x))
-#define SCSET_FOCUS_MODE(st,x) ((st).change_mask.common.s.focus_mode = !!(x))
+#define SMSET_FOCUS_MODE(st,x) ((st).flag_mask.common.s.focus_mode = (x))
+#define SCSET_FOCUS_MODE(st,x) ((st).change_mask.common.s.focus_mode = (x))
 #define SHAS_DEPRESSABLE_BORDER(sf) ((sf).common.s.has_depressable_border)
 #define SFHAS_DEPRESSABLE_BORDER(st) ((st).flags.common.s.has_depressable_border)
 #define SMHAS_DEPRESSABLE_BORDER(st) ((st).flag_mask.common.s.has_depressable_border)
